Fixing spacing issues for score

--- a/main.css
+++ b/main.css
@@ -222,12 +222,16 @@ footer a {
 }
 
 .game-name {
-  font-size: 2em;
+  /* font-size: 2em;
+  font-weight: bold;
+  margin-bottom: 0.5em; */
+  font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 0.5em;
 }
 
 .score {
+  margin: -25px 40px; /* adding this line for spacing */
   position: absolute;
   text-align: center;
   font-size: 20px;
